# beach-cleaning-hardware

./: .gitignore  README.md
components/: .gitignore  UMS5_beach_cleaning_robot-body.3mf  UMS5_camera_mount_enclosure_large_small.3mf  UMS5_lid.3mf  UMS5_premade_chasis_mounting_plate.3mf  camera_mount.FCStd  camera_mount_enclosure_large.3mf  camera_mount_enclosure_small.3mf  camera_mount_lid_large.3mf  camera_mount_lid_small.3mf  l_bracket.FCStd  lid.FCStd  motor_36mm.FCStd  mounting_plate.FCStd  premade_chasis.FCStd  premade_chasis_assembly.FCStd  servo_controller.FCStd  solar_panel.FCStd  stand_offs.FCStd  support_frame_solar.FCStd  support_frame_solar_length.FCStd  support_frame_solar_width.FCStd
components/arm_RoArm-M1/: RoArm-M1 Tutorial VI: How to assemble RoArm-M1.md
components/custom_gripper_parts/: UMS5_3finger_camera.3mf  UMS5_3finger_camera.ufp  UMS5_3finger_camera_pc.ufp  UMS5_3finger_camera_pla.ufp  UMS5_3finger_sc15.3mf  adapter_3fingergripper_cameraA.stl  adapter_3fingergripper_cameraB.stl  servo_holder1.stl  (+1 more)
python-interface/: MANIFEST.in  README.md  pyproject.toml
python-interface/docs/: examples.md  git.md  system.md
python-interface/examples/: manual_video_record.py  video_trash_detector_inference.py
python-interface/src/beachbot/: __init__.py
python-interface/src/beachbot/ai/: __init__.py  dataset.py  debrisdetector.py  ssd_nvidia_torch_hub.py  yolov5_onnx.py  yolov5_opencv.py  yolov5_torch_hub.py
python-interface/src/beachbot/manipulators/: __init__.py  drive.py  roarmm1.py
python-interface/src/beachbot/sensors/: __init__.py  jetsoncsicameraopencv.py  jetsongstcameranative.py  usbcameraopencv.py
python-interface/src/beachbot/utils/: __init__.py  imageviewer.py  imageviewerjetson.py  imageviewermatplotlib.py  pid.py  timer.py  videoserverwebrtc.py  videowriteropencv.py
python-interface/tests/: dataset_analyzer_ui.py  dataset_analyzer_ui_onnx.py  dataset_analyzer_ui_opencv.py  flaskcontroller.py  jetson_csi_cam.py  jetson_gst_cam_native.py  opencv_usb_cam.py  pid_controller.py  roarm_m1.py  roarm_m1_record_replay.ipynb  roarm_path_recorder.py  toss_path.npz  video_analyzer_ui.py  video_analyzer_ui_onnx.py  video_analyzer_ui_opencv.py
python-interface/tests/templates/: index.html
(+41 files in other folders)
