[project]
name =  "beachbot"
version = "0.0.1"
authors = [
    {name = "Author1", email = "Author1@mail.com"},
]
description = "Beachbot Template"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = { text = "TBD" }
dependencies = [
    "numpy",
    "pyserial"
]
requires-python = ">=3.8.1"



[project.urls]
Documentation = "https://TODO"
Source = "https://TODO"
Tracker = "https://TODO"


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'




[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

